--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Pet Adoption</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -175,4 +175,5 @@ aboutLink.addEventListener("click", () => {
 <footer>© 2026 PetCare</footer>
 </body>
 </html>
+
 
